syntax = "proto3";

package task;

service ManagingService {
    rpc CreateTask(Task) returns (FlagResponse) {}
    rpc UpdateTask(UpdateTaskRequest) returns (FlagResponse) {}
    rpc MakeDone(MakeDoneRequest) returns (FlagResponse) {}
    rpc DeleteTask(DeleteTaskRequest) returns (FlagResponse) {}
    rpc GetAllTasks(GetAllRequest) returns (GetAllResponse) {}
    rpc MakeLate(MakeLateRequest) returns (FlagResponse) {}
}

message Task {
    string id =1;
    string created_at = 2;
    string updated_at = 3;
    string deleted_at = 4;
    string assignee = 5;
    string title = 6;
    string deadline = 7;
    bool done = 8;go
    bool overdue = 9;
}

message MakeDoneRequest {
    uint64 id = 1;
}

message MakeLateRequest {
}

message UpdateTaskRequest{
    uint64 id = 1;
    Task task = 2;
}

message DeleteTaskRequest{
    uint64 id = 1;
}

message GetAllRequest {}

message GetAllResponse {
    repeated Task tasks = 1;
}

message FlagResponse {
    bool flag = 1;
}